# pixhawk-proxy

./: .gitmodules  Cargo.toml  LICENSE  README.md  SETUP.sh  build.rs  build_stuff.sh  cli.yml  clone_repos.sh  configure.yml  install_rust.sh  rustfmt.toml  tatus  ubuntu_sim_ros_gazebo.sh
protos/: mavlink_common.proto
src/: battery.rs  battery_status.rs  common.proto  lib.rs  main.rs  pixhawk_proxy.rs
