[package]
name = "pixhawk-proxy"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
build = "build.rs"

[build-dependencies]
prost-build = "0.4"

[dependencies]
lmcp = { path = "../rust-lmcp" }
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"